set up flask app for FE/BE integration. updated readme

--- a/Flask App/templates/index.html
+++ b/Flask App/templates/index.html
@@ -55,8 +55,8 @@ form.search::after {
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <form class="search" action="{{ url_for('results') }}" method="post">
-    <h2>Input your search:</h2>
-    <input type="text" class="name-input name mb-3" id="name" name="name" placeholder="Search by movie title, cast, genre, director name, etc....">
+    <h2>Movie Search and Recommendation System</h2>
+    <input type="text" class="name-input name mb-3" id="search" name="search" placeholder="You can search by movie title, cast, director, etc....">
     <button id="submit_button" type="submit"><i class="fa fa-search"></i></button>
 </form>
 
