updated FEBE integration

--- a/Flask App/templates/index.html
+++ b/Flask App/templates/index.html
@@ -60,5 +60,10 @@ form.search::after {
     <button id="submit_button" type="submit"><i class="fa fa-search"></i></button>
 </form>
 
-</body>
+<script>
+function ClearFields() {
+  document.getElementById("search").value = "";
+}
+</script>
+
 </html>
