--- a/Flask App/templates/results.html
+++ b/Flask App/templates/results.html
@@ -52,7 +52,7 @@ h2 {
 
 h3 {
     font-size: 18px;
-    font-weight: 100;
+    font-weight: bold;
     text-decoration: underline;
 }
 
@@ -70,7 +70,7 @@ p {
         <h1>Search Results</h1>
         <div class="hr_line_dashed"></div>
 
-        <h2>{{ length }} results found for: {{ search }}</span></h2>
+        <h2>{{ length }} result(s) found for: "{{ search }}"</span></h2>
 
         <div class="hr_line_dashed"></div>
         {% for movie in results %}
