--- a/Flask App/templates/results.html
+++ b/Flask App/templates/results.html
@@ -70,7 +70,7 @@ p {
 </style>
 
 <html>
-    <button style="height:40px; width:130px; font-size:20px;" onclick="history.back()">Go Back</button>
+    <button style="height:40px; width:130px; font-size:20px;" onclick="window.location.replace(document.referrer)">Go Back</button>
 
     <div class="search_content">
         <h1>Search Results</h1>
